Improve attribute-combo-select component

--- a/src/top-bar/attribute-combo-select/attribute-combo-select.module.css
+++ b/src/top-bar/attribute-combo-select/attribute-combo-select.module.css
@@ -5,6 +5,10 @@
     overflow-y: auto;
 }
 
+.bordered {
+    border-bottom: 1px solid var(--colors-grey400);
+}
+
 .divider {
     margin-top: 30px !important;
 }
