--- a/src/top-bar/attribute-combo-select/category-option-select.module.css
+++ b/src/top-bar/attribute-combo-select/category-option-select.module.css
@@ -1,6 +1,15 @@
+.menu {
+    max-height: 70vh;
+    overflow-y: auto;
+}
+
 .container {
     inline-size: 350px;
     color: #808080;
+}
+
+.bordered {
+    border-bottom: 1px solid var(--colors-grey400);
 }
 
 .inputWrapper {
