--- a/src/top-bar/attribute-combo-select/menu-select.module.css
+++ b/src/top-bar/attribute-combo-select/menu-select.module.css
@@ -1,6 +1,14 @@
 .menuSelect {
-    inline-size: 400px;
     max-block-size: 70vh;
     overflow: hidden;
     overflow-y: auto;
+}
+
+.bordered {
+    border-bottom: 1px solid var(--colors-grey400);
+}
+
+.option {
+    display: flex;
+    flex-direction: column;
 }
