small changes in css

--- a/src/top-bar/attribute-combo-select/attribute-combo-select.module.css
+++ b/src/top-bar/attribute-combo-select/attribute-combo-select.module.css
@@ -1,7 +1,6 @@
 .menu {
     height: 330px;
     width: 350px;
-    margin: 15px;
     overflow-y: auto;
 }
 
@@ -9,6 +8,11 @@
     border-bottom: 1px solid var(--colors-grey400);
 }
 
+.attributeComboSelect {
+    margin-left: 8px;
+    margin-top: 4px;
+}
+
 .divider {
-    margin-top: 30px !important;
+    margin-top: 20px !important;
 }
