--- a/src/top-bar/attribute-combo-select/single-category-select.module.css
+++ b/src/top-bar/attribute-combo-select/single-category-select.module.css
@@ -3,9 +3,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-left: 8px;
-    margin-top: 4px;
-    margin-right: 8px;
+    margin: 4px 8px 8px 8px;
 }
 
 /* Style the input */
