Add search field for Orgunti and Workflow dropdown

--- a/src/top-bar/org-unit-select/org-unit-select.module.css
+++ b/src/top-bar/org-unit-select/org-unit-select.module.css
@@ -18,3 +18,26 @@
     background: var(--colors-grey300) !important;
     color: var(--colors-grey900) !important;
 }
+
+/* Center the container */
+.inputContainer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 4px 8px 8px 8px;
+}
+
+/* Style the input */
+.searchInput {
+    width: 100%;
+    max-width: 400px;
+    padding: 8px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-shadow: none;
+}
+
+.searchInput:focus {
+    border: 3px solid #5381ec !important;
+    outline: none;
+}
