--- a/src/top-bar/workflow-select/workflow-select.module.css
+++ b/src/top-bar/workflow-select/workflow-select.module.css
@@ -7,3 +7,35 @@
     max-height: 70vh;
     overflow-y: auto;
 }
+
+/* Center the container */
+.inputContainer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 4px 8px 8px 8px;
+}
+
+/* Style the input */
+.searchInput {
+    width: 100%;
+    max-width: 400px;
+    padding: 8px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-shadow: none;
+}
+
+.searchInput:focus {
+    border: 3px solid #5381ec !important;
+    outline: none;
+}
+
+.empty {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    color: #7a879a;
+    padding: 16px 8px;
+}
